# libmuslim-android

./: .clangd  .gitignore  JITPACK.md  LICENSE  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/rizukirr/libmuslim/: LibMuslimTest.kt
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/: prayertimes.h
app/src/main/java/com/rizukirr/libmuslim/: LibMuslim.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
